# effective-testing-pytest

./: README.md  fixture_demo.py  format_data.py  palindrome.py  pyproject.toml  test_assert_examples.py  test_format_data_for_display.py  test_is_palindrome.py  test_with_pytest.py  test_with_skipping.py  test_with_unittest.py
