[tool.poetry]
name = "effective-testing-pytest"
version = "0.1.0"
description = "Code from the _Real Python_ tutorial, \"Effective Python Testing with PyTest\""
authors = ["laj <larry.jones@reveal-energy.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
